RESOLVED FIXED208947
REGRESSION (r257502): HitTestLocation::HitTestLocation(const FloatPoint&, const FloatQuad&) should set m_isRectBased to true
https://bugs.webkit.org/show_bug.cgi?id=208947
Summary REGRESSION (r257502): HitTestLocation::HitTestLocation(const FloatPoint&, con...
Daniel Bates
Reported 2020-03-11 14:48:00 PDT
In bug #208254 I inadvertently removed setting m_isRectBased to true in the constructor HitTestLocation::HitTestLocation(const FloatPoint&, const FloatQuad&). So, it is now set to false. This does not match the original intention of the code and should be reverted.
Attachments
Patch (1.57 KB, patch)
2020-03-11 14:52 PDT, Daniel Bates
no flags
Daniel Bates
Comment 1 2020-03-11 14:52:37 PDT
Daniel Bates
Comment 2 2020-03-11 14:57:38 PDT
Comment on attachment 393290 [details] Patch Clearing flags on attachment: 393290 Committed r258287: <https://trac.webkit.org/changeset/258287>
Daniel Bates
Comment 3 2020-03-11 14:57:39 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2020-03-11 14:58:16 PDT
Simon Fraser (smfr)
Comment 5 2020-03-11 17:35:33 PDT
Did the error cause layout test failures? Should this patch have landed with a test?
Daniel Bates
Comment 6 2020-03-11 17:42:26 PDT
(In reply to Simon Fraser (smfr) from comment #5) > Did the error cause layout test failures? Should this patch have landed with > a test? I don't know. I found this issue by code inspection. When I have a moment I will look to write one.
Note You need to log in before you can comment on or make changes to this bug.