REGRESSION (r257502): HitTestLocation::HitTestLocation(const FloatPoint&, const FloatQuad&) should set m_isRectBased to true https://bugs.webkit.org/show_bug.cgi?id=208947

Reviewed by Wenson Hsieh.

Partial revert of r257502. I accidentally removed initialization of m_isRectBased when refactoring
the code in HitTestLocation::HitTestLocation(const FloatPoint&, const FloatQuad&). Revert this to
be faithful to the code before my change.

* rendering/HitTestLocation.cpp:

Canonical link: https://commits.webkit.org/221864@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@258287 268f45cc-cd09-0410-ab3c-d52691b4dbfc